# Vibe-Trading

./: .gitignore  NOTICE  README.md  README_ar.md  README_ja.md  README_ko.md  README_zh.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml  wiki-deploy.yml  wiki.yml
agent/: .env.example  SKILL.md  api_server.py  mcp_server.py  requirements.txt
agent/backtest/: runner.py
agent/backtest/engines/: base.py
agent/backtest/loaders/: base.py  ccxt_loader.py  registry.py  tushare.py  wind_local_loader.py
agent/cli/: _legacy.py  main.py  onboard.py  theme.py
agent/cli/commands/: chat.py  goal.py
agent/scripts/: bench_performance.py  w4a_run_benches.py
agent/src/: market_data.py  preflight.py
agent/src/agent/: context.py  loop.py  trace.py
agent/src/api/: channels_routes.py  event_probability_routes.py  helpers.py  live_routes.py  models.py  qveris_routes.py  runs_routes.py  scheduled_routes.py  security.py  semiconductor_routes.py  sessions_routes.py  settings_routes.py  state.py  swarm_routes.py  system_routes.py  uploads_routes.py
agent/src/channels/: mochat.py
agent/src/config/: accessor.py  env_schema.py  schema.py
agent/src/event_probability/: __init__.py  kalshi.py  models.py  polymarket.py  service.py  storage.py  taxonomy.py  translation.py
agent/src/factors/: _backend.py  base.py  bench_runner.py  registry.py
agent/src/goal/: store.py
agent/src/hypotheses/: registry.py
agent/src/live/: enforcement.py  order_guard.py
agent/src/providers/: capabilities.py  chat.py  content_filter.py  llm.py  llm_providers.json  openai_codex.py
agent/src/reliability/: __init__.py  config.py  errors.py  redaction.py  schema.py
agent/src/scheduled_research/: executor.py
agent/src/semiconductor_research/: __init__.py  service.py
agent/src/session/: models.py
agent/src/shadow_account/: extractor.py
agent/src/swarm/: grounding.py  runtime.py  store.py  worker.py
agent/src/tools/: alpha_bench_tool.py  financial_statements_tool.py  get_fundamentals_tool.py  mcp.py
agent/tests/: conftest.py  mcp_http_test_helpers.py  test_api_live_runtime.py  test_api_server_startup.py  test_bench_parallel.py  test_chat_llm_streaming.py  test_cli_data.py  test_cli_init.py  test_cli_interactive.py  test_cli_live.py  test_cli_swarm_run_args.py  test_engine_robustness.py  test_env_schema.py  test_event_probability_api.py  test_event_probability_service.py  test_event_probability_sources.py  test_event_probability_storage.py  test_event_probability_taxonomy.py  test_event_probability_translation.py  test_factor_gate_fund_prefix.py  test_financial_rigor_tool.py  test_financial_statements_tool.py  test_fundamental_schema.py  test_fundamentals_pit.py  test_futu_loader.py  test_get_fundamentals_tool.py  test_india_backtest_smoke.py  test_india_broker_loader.py  test_india_equity_engine.py  test_india_mandate.py  test_llm.py  test_llm_provider_defaults.py  test_loader_retry_helpers.py  test_mandate_enforcement.py  test_market_data.py  test_market_detection.py  test_mcp_sse_integration.py  test_mcp_streamable_http_integration.py  test_oauth_token_cache.py  test_openai_codex.py  (+20 more)
agent/tests/factors/: test_india_universe.py
agent/tests/quant/: __init__.py  test_backtest_scorecard_integration.py  test_capacity.py  test_cost_sensitivity.py  test_crowding.py  test_execution_realism.py  test_ic_horizons.py  test_neutralized_ic.py  test_overfit_experimental.py  test_regime_ic.py  test_scorecard_gates.py  test_scorecard_models.py  test_walk_forward.py
agent/tests/reliability/: test_artifact_concurrency.py  test_artifact_hashing.py  test_artifact_models.py  test_artifact_store.py  test_artifact_trace_compat.py  test_circuit_breaker.py  test_market_rules_ashare.py  test_pit_checker.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: router.tsx
tools/: ci_env_var_gate.py  ci_grep_gates.sh  test_ci_env_var_gate.py
wiki/alpha-library/: index.html
wiki/scripts/: check_social_cards.py
(+313 files in other folders)
